fazendo uma galeria com JS

--- a/Aula-09/styles/style.css
+++ b/Aula-09/styles/style.css
@@ -1,3 +1,8 @@
+*{
+    outline: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
 body{
     background-color: aqua;
     display: grid;
@@ -10,4 +15,14 @@ body{
     align-items: center;/*centraliza na verrtical*/
     background-color: aliceblue;
     gap: 10px;
+}
+.container img{
+    margin-top: 5px;
+    max-height: 100%;
+    max-width: 100%;
+
+}
+.imgagem-grande-container img{
+    max-width: 100%;
+    max-width: 100%;
 }
